# landing-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
migrations/: env.py
migrations/versions/: 028074221597_update_username_in_lead_model.py  143e1a4ffa37_fix_origin_typo.py  31690dab69f9_reward_additional_data_default_value.py  579d47564444_update_username_in_lead_model.py  64b1e1bdadef_add_user_model.py  bedea1c833b2_initial_migration.py  d74107a3abd1_reward_jsonb.py  dd26e2b67457_lead_name_not_unique.py  df8e37162011_reward_additional_data_default_value.py
src/: all_models.py  all_utils.py  config.py  database.py  enums.py  logging_config.py  main.py  models.py  schemas.py  utils.py
src/auth/: dependencies.py  routers.py  schemas.py  services.py  utils.py
src/contact_us/: email_templates.py  enums.py  models.py  repository.py  routers.py  schemas.py  services.py  utils.py
src/retool/: api.py  routers.py  schemas.py
src/user/: models.py  routers.py  services.py
src/users/: routers.py  schemas.py  services.py  utils.py
