[project]
name = "landing-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt==4.0.1",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "logfire[fastapi]>=3.14.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.3",
    "pyright>=1.1.400",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "ruff>=0.11.5",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

